--- a/src/sass/desktop/header-desctop.scss
+++ b/src/sass/desktop/header-desctop.scss
@@ -209,7 +209,7 @@
             font-size: 18px;
             font-style: normal;
             font-weight: 400;
-            line-height: 28px; /* 155.556% */
+            line-height: 28px;
             letter-spacing: 0.5px;
           }
         }
