--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,10 @@
 // desktop
 @use "./desktop/header-desctop.scss";
+@use "./desktop/main-spellbind.scss";
+
+/* mobile */
+@use "./mobile/Header.mobile.scss";
+@use "./mobile/Main-spellbind.mobile.scss";
 
 :root {
   --bg-color-red: #dd2242;
@@ -20,3 +25,9 @@ body {
   max-width: 1920px;
   margin: 0 auto;
 }
+// @media (max-width: 375px) {
+//   .container {
+//     padding-left: 30px;
+//     padding-right: 31px;
+//   }
+// }
