--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 .header__bg {
   position: relative;
-  background: linear-gradient(216deg, rgba(0, 0, 0, 0.31) 29.66%, rgba(0, 0, 0, 0.29) 84.2%), url("./bg.jpg");
+  background: linear-gradient(216deg, rgba(0, 0, 0, 0.31) 29.66%, rgba(0, 0, 0, 0.29) 84.2%), url("./background/bg.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -184,7 +184,7 @@
   line-height: 41.081px;
   opacity: none;
 }
-.header__bg .header__text .header__text--btn .header__titles .header__titles-item p {
+.header__bg .header__text .header__text--btn .header__titles .header__titles-item .header__titles-item--text {
   width: 210.109px;
   color: #939393;
   font-feature-settings: "liga" off, "clig" off;
@@ -192,7 +192,7 @@
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 28px; /* 155.556% */
+  line-height: 28px;
   letter-spacing: 0.5px;
 }
 .header__bg .header__text .header__text--btn .header__titles .header__titles-image {
@@ -226,6 +226,325 @@
   text-decoration: none;
 }
 
+.main__top {
+  position: relative;
+  background: linear-gradient(180deg, #010a20 0%, rgba(1, 10, 32, 0) 250%, rgba(1, 10, 32, 0) 150%), url("./background/main_bg1.jpg") 50%/cover no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 0;
+  margin: 0;
+  max-width: 1920px;
+  height: 771px;
+}
+.main__top .main_top-content {
+  display: flex;
+  gap: 130px;
+  padding-top: 184px;
+}
+.main__top .main_top-content .main__top-bg {
+  padding-left: 340px;
+}
+.main__top .main_top-content .main__top-text {
+  padding-top: 80px;
+}
+.main__top .main_top-content .main__top-text h3 {
+  width: 479.501px;
+  color: var(--text-color-white);
+  font-feature-settings: "liga" off, "clig" off;
+  font-family: "DM Sans";
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 50px;
+}
+.main__top .main_top-content .main__top-text p {
+  width: 407.575px;
+  color: var(--text-color-white);
+  font-family: "DM Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0.18px;
+}
+.main__top .main_top-content .main__top-text .main__top-btn {
+  background: var(--bg-color-red);
+  display: flex;
+  width: 179.813px;
+  padding: 16px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  border: none;
+  border-radius: 32px;
+  margin-top: 48.13px;
+  color: var(--text-color-white);
+  cursor: pointer;
+  user-select: none;
+}
+
+/* mobile */
+@media (max-width: 430px) {
+  .header__bg {
+    padding: 0 31px 0 30px;
+    height: 100%;
+  }
+  .header__bg .nav {
+    padding-top: 48px;
+    padding-left: 0;
+  }
+  .header__bg .nav .nav__logo__menu .nav__logo .nav__logo-image {
+    width: 42.643px;
+    height: 42.621px;
+    flex-shrink: 0;
+  }
+  .header__bg .nav .nav__logo__menu .nav__logo .nav__text-logo {
+    width: 111px;
+    font-size: 20.841px;
+  }
+  .header__bg .nav .nav__logo__menu .nav__menu {
+    display: none;
+  }
+  .header__bg .nav .nav__search__burger {
+    margin-right: 0;
+  }
+  .header__bg .nav .nav__search__burger .nav__search {
+    width: 30px;
+    height: 30px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+  }
+  .header__bg .nav .nav__search__burger .nav__burger {
+    filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.1));
+  }
+  .header__bg .header__text {
+    margin-top: 45px;
+  }
+  .header__bg .header__text .header__scroll {
+    display: none;
+  }
+  .header__bg .header__text .header__text--btn {
+    margin-left: 0;
+    width: 100%;
+  }
+  .header__bg .header__text .header__text--btn .header__h1 {
+    width: 314px;
+    height: 126px;
+    font-size: 54.152px;
+    line-height: 62.997px;
+    font-style: normal;
+    font-weight: 900;
+  }
+  .header__bg .header__text .header__text--btn .header__btn {
+    width: 100%;
+    width: 315px;
+    height: 59px;
+    padding: 10.202px;
+    justify-content: center;
+    align-items: center;
+    gap: 5.101px;
+    flex-shrink: 0;
+    border-radius: 107.631px;
+  }
+  .header__bg .header__text .header__text--btn .header__bottom .header__titles {
+    width: 100%;
+    margin-top: 54px;
+    padding-top: 70px;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    gap: 32px;
+  }
+  .header__bg .header__text .header__text--btn .header__bottom .header__titles .header__titles-item {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    padding-left: 32px;
+    padding-right: 71px;
+  }
+  .header__bg .header__text .header__text--btn .header__bottom .header__titles .header__titles-image {
+    position: relative;
+    width: 100%;
+  }
+  .header__bg .social {
+    display: none;
+  }
+}
+@media (max-width: 375px) {
+  .header__bg {
+    padding: 0 31px 0 30px;
+    height: 100%;
+  }
+  .header__bg .nav {
+    padding-top: 48px;
+    padding-left: 0;
+  }
+  .header__bg .nav .nav__logo__menu .nav__logo .nav__logo-image {
+    width: 42.643px;
+    height: 42.621px;
+    flex-shrink: 0;
+  }
+  .header__bg .nav .nav__logo__menu .nav__logo .nav__text-logo {
+    width: 111px;
+    font-size: 20.841px;
+  }
+  .header__bg .nav .nav__logo__menu .nav__menu {
+    display: none;
+  }
+  .header__bg .nav .nav__search__burger {
+    margin-right: 0;
+  }
+  .header__bg .nav .nav__search__burger .nav__search {
+    width: 30px;
+    height: 30px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+  }
+  .header__bg .nav .nav__search__burger .nav__burger {
+    filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.1));
+  }
+  .header__bg .header__text {
+    margin-top: 45px;
+  }
+  .header__bg .header__text .header__scroll {
+    display: none;
+  }
+  .header__bg .header__text .header__text--btn {
+    margin-left: 0;
+    width: 100%;
+  }
+  .header__bg .header__text .header__text--btn .header__h1 {
+    width: 314px;
+    height: 126px;
+    font-size: 54.152px;
+    line-height: 62.997px;
+    font-style: normal;
+    font-weight: 900;
+  }
+  .header__bg .header__text .header__text--btn .header__btn {
+    width: 100%;
+    width: 315px;
+    height: 59px;
+    padding: 10.202px;
+    justify-content: center;
+    align-items: center;
+    gap: 5.101px;
+    flex-shrink: 0;
+    border-radius: 107.631px;
+  }
+  .header__bg .header__text .header__text--btn .header__bottom .header__titles {
+    width: 100%;
+    margin-top: 54px;
+    padding-top: 70px;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    gap: 32px;
+  }
+  .header__bg .header__text .header__text--btn .header__bottom .header__titles .header__titles-item {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    padding-left: 32px;
+    padding-right: 71px;
+  }
+  .header__bg .header__text .header__text--btn .header__bottom .header__titles .header__titles-image {
+    position: relative;
+    width: 100%;
+  }
+  .header__bg .social {
+    display: none;
+  }
+}
+@media (max-width: 430px) {
+  .main__top {
+    padding-top: 40px;
+  }
+  .main__top .main_top-content {
+    padding: 0px 31px 0px 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 33px;
+  }
+  .main__top .main_top-content .main__top-bg {
+    padding: 0;
+  }
+  .main__top .main_top-content .main__top-bg img {
+    width: 100%;
+  }
+  .main__top .main_top-content .main__top-text {
+    padding: 0;
+  }
+  .main__top .main_top-content .main__top-text h3 {
+    width: 314px;
+    height: 162.886px;
+    flex-shrink: 0;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 46px;
+  }
+  .main__top .main_top-content .main__top-text p {
+    width: 315px;
+    font-size: 16px;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.5px;
+  }
+  .main__top .main_top-content .main__top-text .main__top-btn {
+    width: 100%;
+    display: flex;
+    width: 314px;
+    height: 72px;
+    padding: 16px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+  }
+}
+@media (max-width: 375px) {
+  .main__top {
+    padding-top: 40px;
+  }
+  .main__top .main_top-content {
+    padding: 0px 31px 0px 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 33px;
+  }
+  .main__top .main_top-content .main__top-bg {
+    padding: 0;
+  }
+  .main__top .main_top-content .main__top-bg img {
+    width: 314px;
+  }
+  .main__top .main_top-content .main__top-text {
+    padding: 0;
+  }
+  .main__top .main_top-content .main__top-text h3 {
+    width: 314px;
+    height: 162.886px;
+    flex-shrink: 0;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 46px;
+  }
+  .main__top .main_top-content .main__top-text p {
+    width: 315px;
+    font-size: 16px;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.5px;
+  }
+  .main__top .main_top-content .main__top-text .main__top-btn {
+    width: 100%;
+    display: flex;
+    width: 314px;
+    height: 72px;
+    padding: 16px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+  }
+}
 :root {
   --bg-color-red: #dd2242;
   --text-color-white: #fff;
