--- a/src/css/style.css
+++ b/src/css/style.css
@@ -227,6 +227,57 @@
 }
 
 .main__top {
+  display: flex;
+  overflow: hidden;
+}
+.main__top .main_top-content-wrap {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 160px;
+  padding-left: 340px;
+  padding-top: 106px;
+  padding-bottom: 241px;
+}
+.main__top .main_top-content-wrap .main__top-text-wrap {
+  padding-top: 80px;
+}
+.main__top .main_top-content-wrap .main__top-text-wrap h3 {
+  width: 479.501px;
+  color: var(--text-color-white);
+  font-feature-settings: "liga" off, "clig" off;
+  font-family: "DM Sans";
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 50px;
+}
+.main__top .main_top-content-wrap .main__top-text-wrap p {
+  width: 407.575px;
+  color: var(--text-color-white);
+  font-family: "DM Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0.18px;
+}
+.main__top .main_top-content-wrap .main__top-text-wrap .main__top-btn {
+  background: var(--bg-color-red);
+  display: flex;
+  width: 179.813px;
+  padding: 16px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  border: none;
+  border-radius: 32px;
+  margin-top: 48.13px;
+  color: var(--text-color-white);
+  cursor: pointer;
+  user-select: none;
+}
+
+.main__top {
   position: relative;
   background: linear-gradient(180deg, #010a20 0%, rgba(1, 10, 32, 0) 250%, rgba(1, 10, 32, 0) 150%), url("./background/main_bg1.jpg") 50%/cover no-repeat;
   background-size: cover;
@@ -235,12 +286,12 @@
   padding: 0;
   margin: 0;
   max-width: 1920px;
-  height: 771px;
 }
 .main__top .main_top-content {
   display: flex;
   gap: 130px;
   padding-top: 184px;
+  padding-bottom: 97px;
 }
 .main__top .main_top-content .main__top-bg {
   padding-left: 340px;
@@ -269,6 +320,7 @@
   letter-spacing: 0.18px;
 }
 .main__top .main_top-content .main__top-text .main__top-btn {
+  margin-bottom: 38.19px;
   background: var(--bg-color-red);
   display: flex;
   width: 179.813px;
@@ -282,6 +334,169 @@
   color: var(--text-color-white);
   cursor: pointer;
   user-select: none;
+}
+
+.secrets {
+  position: relative;
+  max-width: 1920px;
+  height: 2207px;
+  background: url("./background/unsplash-bg.jpg") lightgray -12.025px -395.323px/100.731% 131.158% no-repeat;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0;
+  margin: 0;
+}
+.secrets h2 {
+  padding-top: 127px;
+  color: var(--Blue---Background, #010a20);
+  text-align: center;
+  font-family: "DM Sans";
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+.secrets .secrets__img {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  gap: 31px;
+}
+.secrets .secrets__img img {
+  display: flex;
+}
+.secrets .secrets__img .arrow-left,
+.secrets .secrets__img .arrow-right {
+  display: flex;
+  align-items: center;
+}
+.secrets .circle {
+  display: flex;
+  justify-content: center;
+  padding-top: 28px;
+}
+.secrets .opacity__block {
+  position: absolute;
+  width: 100%;
+  max-width: 1920px;
+  height: 794px;
+  opacity: 0.9;
+  background: #020c21;
+  bottom: 0;
+}
+.secrets .opacity__block .opacity__block-h1-text h1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+  padding-top: 201px;
+  color: #fff;
+  text-align: center;
+  font-family: "DM Sans";
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%; /* 90px */
+}
+.secrets .opacity__block .opacity__block-h1-text h1 br {
+  display: none;
+}
+.secrets .opacity__block .opacity__block-h1-text .opacity__block-text {
+  margin-top: 38.83px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 484px;
+  height: 102px;
+  color: var(--Text-Lighten, #e0e0e0);
+  text-align: center;
+  font-feature-settings: "liga" off, "clig" off;
+  /* Paragraph Light */
+  font-family: "DM Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 155.556% */
+  letter-spacing: 0.5px;
+}
+.secrets .opacity__block .opacity__block-items {
+  margin-top: 39px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0;
+}
+.secrets .opacity__block-item h1 {
+  width: 314px;
+  color: #dd2242;
+  text-align: center;
+  /* Mobile H1 */
+  font-family: "DM Sans";
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 46px; /* 115% */
+}
+.secrets .opacity__block-item p {
+  width: 314px;
+  height: 70.229px;
+  text-align: center;
+  color: var(--Text-Lighten, #e0e0e0);
+  font-feature-settings: "liga" off, "clig" off;
+  /* Mobile Paragraph 1 */
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.5px;
+}
+
+.gallery h2 {
+  padding-top: 177px;
+  color: var(--Blue---Background, #010a20);
+  text-align: center;
+  /* H2 */
+  font-family: "DM Sans";
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+.gallery p {
+  margin: 0 auto;
+  display: flex;
+  margin-top: 41px;
+  align-items: center;
+  width: 511px;
+  height: 47px;
+  color: var(--Paragraph-Dark, #6f7787);
+  text-align: center;
+  /* Paragraph */
+  font-family: "DM Sans";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px; /* 155.556% */
+  letter-spacing: 0.18px;
+}
+.gallery .gallery__img {
+  margin-top: 71px;
+  padding-left: 378px;
+  padding-right: 372px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 30px;
+}
+.gallery .gallery__img img {
+  width: 100%;
+  display: grid;
+  object-fit: cover;
+}
+.gallery .gallery__img .gallery__img-block {
+  display: grid;
+  gap: 30px;
 }
 
 /* mobile */
@@ -458,6 +673,48 @@
 @media (max-width: 430px) {
   .main__top {
     padding-top: 40px;
+    overflow: hidden;
+  }
+  .main__top .main_top-content-wrap {
+    padding: 0px 31px 0px 30px;
+    flex-direction: column;
+    gap: 33px;
+  }
+  .main__top .main_top-content-wrap .main__top-bg-wrap {
+    padding: 0;
+  }
+  .main__top .main_top-content-wrap .main__top-bg-wrap img {
+    width: 100%;
+  }
+  .main__top .main_top-content-wrap .main__top-text-wrap {
+    padding: 0;
+  }
+  .main__top .main_top-content-wrap .main__top-text-wrap h3 {
+    max-width: 314px;
+    padding-top: 0px;
+  }
+  .main__top .main_top-content-wrap .main__top-text-wrap p {
+    padding-top: 47px;
+    width: 315px;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+  }
+  .main__top .main_top-content-wrap .main__top-text-wrap .main__top-btn {
+    width: 100%;
+    display: flex;
+    height: 72px;
+    padding: 16px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48.13px;
+    margin-bottom: 42px;
+    font-family: "DM Sans";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
   }
   .main__top .main_top-content {
     padding: 0px 31px 0px 30px;
@@ -470,6 +727,84 @@
   }
   .main__top .main_top-content .main__top-bg img {
     width: 100%;
+  }
+  .main__top .main_top-content .main__top-text {
+    padding: 0;
+  }
+  .main__top .main_top-content .main__top-text h3 {
+    width: 100%;
+    max-width: 314px;
+    height: 162.886px;
+    flex-shrink: 0;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 46px;
+  }
+  .main__top .main_top-content .main__top-text p {
+    width: 315px;
+    font-size: 16px;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.5px;
+  }
+  .main__top .main_top-content .main__top-text .main__top-btn {
+    width: 100%;
+    display: flex;
+    height: 72px;
+    padding: 16px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    font-family: "DM Sans";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%;
+  }
+}
+@media (max-width: 375px) {
+  .main__top {
+    padding-top: 40px;
+  }
+  .main__top .main_top-content-wrap {
+    padding: 0px 31px 0px 30px;
+    flex-direction: column;
+    gap: 33px;
+  }
+  .main__top .main_top-content-wrap .main__top-bg-wrap {
+    padding: 0;
+  }
+  .main__top .main_top-content-wrap .main__top-bg-wrap img {
+    width: 314px;
+  }
+  .main__top .main_top-content-wrap .main__top-text-wrap {
+    padding: 0;
+  }
+  .main__top .main_top-content-wrap .main__top-text-wrap h3 {
+    width: 314px;
+    height: 162.886px;
+    padding-top: 0px;
+  }
+  .main__top .main_top-content-wrap .main__top-text-wrap p {
+    width: 315px;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+  }
+  .main__top .main_top-content-wrap .main__top-text-wrap .main__top-btn {
+    width: 100%;
+  }
+  .main__top .main_top-content {
+    padding: 0px 31px 0px 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 33px;
+  }
+  .main__top .main_top-content .main__top-bg {
+    padding: 0;
+  }
+  .main__top .main_top-content .main__top-bg img {
+    width: 314px;
   }
   .main__top .main_top-content .main__top-text {
     padding: 0;
@@ -501,48 +836,159 @@
   }
 }
 @media (max-width: 375px) {
-  .main__top {
-    padding-top: 40px;
+  .secrets {
+    background: url("./background/bg-mobile-mountain.png");
+    height: 2063px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    overflow: hidden;
   }
-  .main__top .main_top-content {
-    padding: 0px 31px 0px 30px;
+  .secrets h2 {
+    padding: 0;
+    padding-top: 20px;
+  }
+  .secrets .secrets__img {
+    position: relative;
+    margin-top: 23px;
+    padding: 0px 7px 0 7px;
+  }
+  .secrets .secrets__img img {
     display: flex;
-    flex-direction: column;
-    gap: 33px;
+    height: 200px;
   }
-  .main__top .main_top-content .main__top-bg {
-    padding: 0;
+  .secrets .secrets__img .secrets__img-none {
+    display: none;
   }
-  .main__top .main_top-content .main__top-bg img {
-    width: 314px;
+  .secrets .secrets__img .arrow-left {
+    position: absolute;
+    width: 12px;
+    height: 19.546px;
+    top: 50%;
+    left: 10px;
   }
-  .main__top .main_top-content .main__top-text {
-    padding: 0;
+  .secrets .secrets__img .arrow-right {
+    position: absolute;
+    width: 12px;
+    height: 19.546px;
+    top: 50%;
+    right: 10px;
   }
-  .main__top .main_top-content .main__top-text h3 {
-    width: 314px;
-    height: 162.886px;
+  .secrets .opacity__block {
+    padding: 72px 31px 30px;
+    position: absolute;
+    bottom: 46px;
+    overflow: hidden;
+    width: 376px;
+    height: 929px;
     flex-shrink: 0;
+    opacity: 0.9;
+    background: #020c21;
+  }
+  .secrets .opacity__block .opacity__block-h1-text h1 {
+    display: flex;
+    padding: 0;
+    width: 314px;
+    height: 52px;
+    flex-direction: column;
+    justify-content: center;
+    flex-shrink: 0;
+    color: #fff;
+    text-align: center;
+    /* Mobile H1 */
+    font-family: "DM Sans";
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
     line-height: 46px;
   }
-  .main__top .main_top-content .main__top-text p {
-    width: 315px;
+  .secrets .opacity__block .opacity__block-h1-text .opacity__block-text {
+    width: 314px;
+    margin-top: 57px;
+    color: var(--Text-Lighten, #e0e0e0);
+    text-align: center;
+    font-feature-settings: "liga" off, "clig" off;
+    /* Mobile Paragraph 1 */
+    font-family: "DM Sans";
     font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
     line-height: 24px; /* 150% */
     letter-spacing: 0.5px;
   }
-  .main__top .main_top-content .main__top-text .main__top-btn {
-    width: 100%;
-    display: flex;
+  .secrets .opacity__block #opacity__block-items {
+    display: block;
+  }
+  .secrets .opacity__block #opacity__block-items .opacity__block-item:first-of-type {
+    margin-top: 15px;
+    margin-bottom: 88.8px;
+  }
+  .secrets .opacity__block #opacity__block-items .opacity__block-item:last-of-type {
+    margin-top: 15px;
+    margin-top: 43.8px;
+  }
+  .secrets .opacity__block #opacity__block-items .opacity__block-item h1 {
     width: 314px;
-    height: 72px;
-    padding: 16px 24px;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
+    color: #dd2242;
+    text-align: center;
+    /* Mobile H1 */
+    font-family: "DM Sans";
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 46px; /* 115% */
+  }
+  .secrets .opacity__block #opacity__block-items .opacity__block-item p {
+    width: 314px;
+    height: 70.229px;
+    text-align: center;
+    color: var(--Text-Lighten, #e0e0e0);
+    font-feature-settings: "liga" off, "clig" off;
+    /* Mobile Paragraph 1 */
+    font-family: "DM Sans";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.5px;
+  }
+}
+@media (max-width: 375px) {
+  .gallery {
+    padding: 0px 32px 0 31px;
+  }
+  .gallery h2 {
+    padding: 0;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 46px;
+  }
+  .gallery p {
+    margin-top: 20px;
+    align-items: flex-start;
+    padding: 0;
+    width: 314px;
+    height: 130px;
+  }
+  .gallery .gallery__img {
+    margin: 0;
+    padding: 0;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    gap: 12px;
+  }
+  .gallery .gallery__img img {
+    width: 150px;
+    display: grid;
+    object-fit: cover;
+  }
+  .gallery .gallery__img .gallery__img-block {
+    display: grid;
+    gap: 12px;
+  }
+  .gallery .gallery__img .gallery__img-block:last-of-type {
+    display: contents;
   }
 }
 :root {
