--- a/src/sass/desktop/main-spellbind.scss
+++ b/src/sass/desktop/main-spellbind.scss
@@ -1,4 +1,57 @@
 .main__top {
+  display: flex;
+  overflow: hidden;
+  .main_top-content-wrap {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 160px;
+    padding-left: 340px;
+    padding-top: 106px;
+    padding-bottom: 241px;
+
+    .main__top-text-wrap {
+      padding-top: 80px;
+      h3 {
+        width: 479.501px;
+        color: var(--text-color-white);
+        font-feature-settings: "liga" off, "clig" off;
+        font-family: "DM Sans";
+        font-size: 42px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 50px;
+      }
+
+      p {
+        width: 407.575px;
+        color: var(--text-color-white);
+        font-family: "DM Sans";
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 28px;
+        letter-spacing: 0.18px;
+      }
+      .main__top-btn {
+        background: var(--bg-color-red);
+        display: flex;
+        width: 179.813px;
+        padding: 16px 24px;
+        justify-content: center;
+        align-items: center;
+        gap: 24px;
+        border: none;
+        border-radius: 32px;
+        margin-top: 48.13px;
+        color: var(--text-color-white);
+        cursor: pointer;
+        user-select: none;
+      }
+    }
+  }
+}
+// -----
+.main__top {
   position: relative;
   background: linear-gradient(
       180deg,
@@ -13,18 +66,15 @@
   padding: 0;
   margin: 0;
   max-width: 1920px;
-  height: 771px;
 
   .main_top-content {
     display: flex;
     gap: 130px;
-    // align-items: center;
     padding-top: 184px;
+    padding-bottom: 97px;
 
     .main__top-bg {
       padding-left: 340px;
-      img {
-      }
     }
     .main__top-text {
       padding-top: 80px;
@@ -51,6 +101,7 @@
         letter-spacing: 0.18px;
       }
       .main__top-btn {
+        margin-bottom: 38.19px;
         background: var(--bg-color-red);
         display: flex;
         width: 179.813px;
