--- a/src/sass/mobile/Main-spellbind.mobile.scss
+++ b/src/sass/mobile/Main-spellbind.mobile.scss
@@ -1,7 +1,49 @@
 @media (max-width: 430px) {
   .main__top {
     padding-top: 40px;
+    overflow: hidden;
+    .main_top-content-wrap {
+      padding: 0px 31px 0px 30px;
+      flex-direction: column;
+      gap: 33px;
 
+      .main__top-bg-wrap {
+        padding: 0;
+        img {
+          width: 100%;
+        }
+      }
+      .main__top-text-wrap {
+        padding: 0;
+        h3 {
+          max-width: 314px;
+          padding-top: 0px;
+        }
+        p {
+          padding-top: 47px;
+          width: 315px;
+          font-size: 16px;
+          line-height: 24px;
+          letter-spacing: 0.5px;
+        }
+        .main__top-btn {
+          width: 100%;
+          display: flex;
+          height: 72px;
+          padding: 16px 24px;
+          justify-content: center;
+          align-items: center;
+          gap: 24px;
+          margin-top: 48.13px;
+          margin-bottom: 42px;
+          font-family: "DM Sans";
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 150%;
+        }
+      }
+    }
     .main_top-content {
       padding: 0px 31px 0px 30px;
       display: flex;
@@ -12,13 +54,13 @@
         padding: 0;
         img {
           width: 100%;
-          //   width: 314px;
         }
       }
       .main__top-text {
         padding: 0;
         h3 {
-          width: 314px;
+          width: 100%;
+          max-width: 314px;
           height: 162.886px;
           flex-shrink: 0;
           font-size: 40px;
@@ -36,12 +78,16 @@
         .main__top-btn {
           width: 100%;
           display: flex;
-          width: 314px;
           height: 72px;
           padding: 16px 24px;
           justify-content: center;
           align-items: center;
           gap: 24px;
+          font-family: "DM Sans";
+          font-size: 18px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: 150%;
         }
       }
     }
@@ -51,7 +97,35 @@
 @media (max-width: 375px) {
   .main__top {
     padding-top: 40px;
+    .main_top-content-wrap {
+      padding: 0px 31px 0px 30px;
+      flex-direction: column;
+      gap: 33px;
 
+      .main__top-bg-wrap {
+        padding: 0;
+        img {
+          width: 314px;
+        }
+      }
+      .main__top-text-wrap {
+        padding: 0;
+        h3 {
+          width: 314px;
+          height: 162.886px;
+          padding-top: 0px;
+        }
+        p {
+          width: 315px;
+          font-size: 16px;
+          line-height: 24px;
+          letter-spacing: 0.5px;
+        }
+        .main__top-btn {
+          width: 100%;
+        }
+      }
+    }
     .main_top-content {
       padding: 0px 31px 0px 30px;
       display: flex;
