--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 // desktop
 @use "./desktop/header-desctop.scss";
 @use "./desktop/main-spellbind.scss";
+@use "./desktop/experience-desctop.scss";
 @use "./desktop/secrets-desctop.scss";
 @use "./desktop/gallery-descktop.scss";
 
