--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,7 @@
 @use "./mobile/Header.mobile.scss";
 @use "./mobile/Main-spellbind.mobile.scss";
 @use "./mobile/Secrets.mobile.scss";
+@use "./mobile/Experience.mobile.scss";
 @use "./mobile/Gallery.mobile.scss";
 
 :root {
