--- a/src/sass/desktop/experience-desctop.scss
+++ b/src/sass/desktop/experience-desctop.scss
@@ -8,6 +8,8 @@
   position: relative;
 
   h3 {
+    margin: 0 auto;
+    width: 1056px;
     padding-top: 141px;
     color: var(--Colors-White, #fff);
     text-align: center;
@@ -18,6 +20,10 @@
     font-style: normal;
     font-weight: 700;
     line-height: 50px;
+
+    br {
+      display: none;
+    }
   }
   .experience__life-image {
     margin: 67.2px auto;
